Add AI feature to generate role properties

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -590,6 +590,11 @@
     "defaultWorkingTimeHelp": "Default time allocated to each member with this role.",
     "color": "Customize color"
   },
+  "RoleGeneratorModal": {
+    "heading": "Role {{role}}",
+    "loading": "Generating role properties...",
+    "waitInfo": "This may take a few tens of seconds."
+  },
   "RRuleEditor": {
     "repeat": "Repeat every",
     "freqs": {
