--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -372,7 +372,8 @@
     "placeholder": "Step title..."
   },
   "MeetingStepsConfigController": {
-    "addStep": "Add a step"
+    "addStep": "Add a step",
+    "empty": "You must add at least one step to the agenda."
   },
   "MeetingStartNotificationModal": {
     "heading": "Send a notification?",
