Reorganize Dashboard and rename to News

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -666,7 +666,7 @@
   "Sidebar": {
     "orgs": "Organizations",
     "menu": "Menu",
-    "dashboard": "Dashboard",
+    "dashboard": "News",
     "roles": "Org chart",
     "threads": "Topics",
     "meetings": "Meetings",
