--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -699,7 +699,7 @@
   "Sidebar": {
     "orgs": "Organisations",
     "menu": "Menu",
-    "dashboard": "Dashboard",
+    "dashboard": "Actualités",
     "roles": "Organigramme",
     "threads": "Sujets",
     "meetings": "Réunions",
